# thrombophilia-risk-mining

./: .gitignore  README.md  clinical_risk_score_per_patient.csv  color_rules.json  color_rules2.json  edas_ddvalmcg_histogram.csv  edas_ddvalmcg_histogram.html  edas_ddvalmcg_histogram_summary.csv  pyproject.toml  requirements.txt
data/: patD_spec_subset_validation.json
docs/: .buildinfo  .buildinfo.bak  api.html  architecture.html  conf.py  development.html  genindex.html  index.html  installation.html  installation.rst  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js  technical_reference.md  usage.html
docs-source/: api.rst
docs/_modules/: cli.html  data_processor.html  exp_association_explorer.html  exp_bayesian_networks.html  exp_categorical_association.html  exp_clinical_risk_score.html  exp_contrast_mining.html  exp_permutation_importance.html  exp_score_screening.html  exp_unsupervised_clustering.html  experiment_base.html  index.html
docs/_sources/: api.rst.txt  architecture.rst.txt  development.rst.txt  usage.rst.txt
docs/architecture/: ActivitiesDiagram.puml  ClassesDiagram.puml  CommunicationDiagram.puml  ComponentsDiagram.puml  DeploymentDiagram.puml  Fig21.aux  Fig21.tex  Fig27.tex  InteractionDiagram.puml  ObjectsDiagram.puml  PackagesDiagram.puml  ProfilesDiagram.puml  SequenceDiagram.puml  StateDiagram.puml  StructureDiagram.puml  TemporalDiagram.puml  UseCaseDiagram.puml
docs/docs/: .buildinfo  api.html  architecture.html  development.html  genindex.html  index.html  objects.inv  searchindex.js  (+1 more)
docs_source/: Makefile  conf.py  make.bat  usage.rst
notebooks/: XGBoost_10Fold_CV_Notebook.ipynb  trb_c01_assrul.ipynb  trb_c01_xgboost.ipynb  trb_c02_xgboost.ipynb  trombofilia.ipynb
src/: cli.py  data_processor.py  exp_association_explorer.py  exp_bayesian_networks.py  exp_categorical_association.py  exp_clinical_risk_score.py  exp_contrast_mining.py  exp_permutation_importance.py  exp_score_screening.py  exp_unsupervised_clustering.py  experiment_base.py  patd_spec_tool.py  recolor_umap.py
tests/: test_exp_association_explorer.py  test_exp_bayesian_networks.py  test_exp_categorical_association.py  test_exp_clinical_risk_score.py  test_exp_contrast_mining.py  test_exp_permutation_importance.py  test_exp_score_screening.py  test_exp_unsupervised_clustering.py  test_patd_spec_tool.py  test_recolor_umap.py
(+41 files in other folders)
