[tool.poetry]
name = "thrombophilia-risk-mining"
version = "0.1.0"
description = "An object-oriented framework for knowledge discovery and risk stratification on a national thrombophilia database."
authors = ["Lucia Ordieres-Ortega <lucia.ordieres@salud.madrid.org>"]
readme = "README.md"
packages = [{ include = "src" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.0"
openpyxl = "^3.1.2"
pyarrow = "^14.0.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
mlxtend = "^0.23.1"
plotly = "^5.19.0"
pgmpy = "^0.1.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.11.2"
pandas-stubs = "^2.2.2.240909"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
sphinx-autodoc-typehints = "^2.3.0"

[tool.poetry.scripts]
thrombomining = "src.cli:main"

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "mlxtend.*",
    "plotly.*",
    "sklearn.*",
    "xgboost.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
