[tool.poetry]
name = "thrombophilia-risk-mining"
version = "0.2.0"
description = "Advanced object-oriented framework for clinical gatekeeping and joint probability mining on thrombophilia data."
authors = ["Lucia Ordieres-Ortega <lucia.ordieres@salud.madrid.org>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.0"
openpyxl = "^3.1.2"
pyarrow = "^14.0.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
mlxtend = "^0.23.1"
plotly = "^5.19.0"
pgmpy = "^0.1.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
thrombomining = "src.cli:main"
